--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -19,8 +19,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/sdlmm/src;&quot;$(SDL_mixer)&quot;;../../../libs/getopt;&quot;../../../libs/libsigc++&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;HEXAGON,_NOASM_,FREEMAPZOOM,NEWKEYB,_WIN32_,karteneditor,_SDL_"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/sdlmm/src;&quot;$(SDL_mixer)&quot;;../../../libs/getopt;;&quot;$(libsigcpp)&quot;;&quot;$(paragui12)/include&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;HEXAGON,_NOASM_,FREEMAPZOOM,NEWKEYB,_WIN32_,karteneditor,_SDL_;NOMINMAX"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -35,10 +35,10 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="triangulate.lib libbzip2.lib sdlevent.lib SDL.lib SDLmain.lib SDLmm.lib SDL_image.lib SDL_mixer.lib"
+				AdditionalDependencies="triangulate.lib libbzip2.lib jpeglib.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.debug.lib paragui_static.lib physfs.lib freetypeMT_D.lib"
 				OutputFile="$(OutDir)/bin/mapeditor.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Debug&quot;;&quot;$(SDL_image)/VisualC/Debug&quot;;../../../Debug/lib;&quot;../../../libs/libsigc++/sigc++/Debug&quot;;../../../libs/SDLmm/SDLmm/Debug;&quot;$(SDL)/VisualC/SDLmain/Debug&quot;;&quot;$(SDL)/VisualC/SDL/Debug&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Debug&quot;;&quot;$(SDL_image)/VisualC/Debug&quot;;&quot;$(OutDir)/lib&quot;;../../../libs/SDLmm/SDLmm/debug;&quot;$(SDL)/VisualC/SDLmain/Debug&quot;;&quot;$(SDL)/VisualC/SDL/Debug&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;../../../debug/lib;&quot;$(PARAGUI12)\VisualC\paragui_dynamic\Debug&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/mapeditor.pdb"
 				SubSystem="2"
@@ -78,8 +78,8 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="2"
-				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)/include&quot;;&quot;$(SDL_mixer)&quot;;../../../libs/getopt;&quot;../../../libs/libsigc++&quot;;../../../libs/SDLmm/include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;HEXAGON,_NOASM_,FREEMAPZOOM,NEWKEYB,_WIN32_,karteneditor,_SDL_"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)/include&quot;;&quot;$(SDL_mixer)&quot;;../../../libs/getopt;&quot;$(libsigcpp)&quot;;&quot;$(paragui12)/include&quot;;../../../libs/SDLmm/include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;HEXAGON,_NOASM_,FREEMAPZOOM,NEWKEYB,_WIN32_,karteneditor,_SDL_;NOMINMAX"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
@@ -95,10 +95,10 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="triangulate.lib libbzip2.lib sdlevent.lib SDL.lib SDLmain.lib SDLmm.lib SDL_image.lib SDL_mixer.lib"
+				AdditionalDependencies="sdlevent.lib triangulate.lib libbzip2.lib jpeglib.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.lib paragui_static.lib physfs.lib freetypeMT.lib"
 				OutputFile="$(OutDir)/bin/mapeditor.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Release&quot;;&quot;$(SDL_image)/VisualC/Release&quot;;../../../Release/lib;&quot;../../../libs/libsigc++/sigc++/release&quot;;../../../libs/SDLmm/SDLmm/release;&quot;$(SDL)/VisualC/SDLmain/Release&quot;;&quot;$(SDL)/VisualC/SDL/Release&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Release&quot;;&quot;$(SDL_image)/VisualC/Release&quot;;../../../Release/lib;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;../../../libs/SDLmm/SDLmm/release;&quot;$(SDL)/VisualC/SDLmain/Release&quot;;&quot;$(SDL)/VisualC/SDL/Release&quot;;&quot;$(PARAGUI12)\VisualC\paragui_dynamic\Release&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/mapeditor.pdb"
 				SubSystem="2"
@@ -162,9 +162,6 @@
 				RelativePath="..\..\..\clipboard.cpp">
 			</File>
 			<File
-				RelativePath="..\..\..\CLoadable.cpp">
-			</File>
-			<File
 				RelativePath="..\..\..\containerbase.cpp">
 			</File>
 			<File
@@ -210,6 +207,9 @@
 				RelativePath="..\..\..\gameoptions.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\geometry.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\libs\getopt\getopt.c">
 			</File>
 			<File
@@ -217,6 +217,12 @@
 			</File>
 			<File
 				RelativePath="..\..\..\graphicset.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\guidimension.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\iconrepository.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\itemrepository.cpp">
@@ -249,9 +255,6 @@
 				RelativePath="..\..\..\music.cpp">
 			</File>
 			<File
-				RelativePath="..\..\..\Named.cpp">
-			</File>
-			<File
 				RelativePath="..\ndir.c">
 			</File>
 			<File
@@ -264,7 +267,13 @@
 				RelativePath="..\..\..\objecttype.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\overviewmapimage.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\palette.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\paradialog.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\password.cpp">
@@ -279,16 +288,16 @@
 				RelativePath="..\..\..\prehistoricevents.cpp">
 			</File>
 			<File
-				RelativePath="..\..\..\Property.cpp">
-			</File>
-			<File
-				RelativePath="..\..\..\PropertyGroup.cpp">
-			</File>
-			<File
 				RelativePath="..\..\..\research.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\resourcenet.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\resourceplacement.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\resourceplacementdialog.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\sgstream.cpp">
@@ -338,6 +347,28 @@
 			<File
 				RelativePath="..\..\..\viewcalculation.cpp">
 			</File>
+			<File
+				RelativePath="..\..\..\weatherarea.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\weathercast.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\weatherdialog.cpp">
+			</File>
+			<Filter
+				Name="graphics"
+				Filter="">
+				<File
+					RelativePath="..\..\..\graphics\blitter.cpp">
+				</File>
+				<File
+					RelativePath="..\..\..\graphics\drawing.cpp">
+				</File>
+				<File
+					RelativePath="..\..\..\graphics\surface.cpp">
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
