Fixed map loading problems  Improved small map display

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -433,11 +433,312 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
 			<File
+				RelativePath="..\..\..\ascstring.h">
+			</File>
+			<File
+				RelativePath="..\..\..\ASCStringHelpers.h">
+			</File>
+			<File
+				RelativePath="..\..\..\astar2.h">
+			</File>
+			<File
+				RelativePath="..\..\..\attack.h">
+			</File>
+			<File
+				RelativePath="..\..\..\baseaiinterface.h">
+			</File>
+			<File
+				RelativePath="..\..\..\basegfx.h">
+			</File>
+			<File
+				RelativePath="..\..\..\basestreaminterface.h">
+			</File>
+			<File
+				RelativePath="..\..\..\basestrm.h">
+			</File>
+			<File
+				RelativePath="..\..\..\basetemp.h">
+			</File>
+			<File
+				RelativePath="..\..\..\basicmessages.h">
+			</File>
+			<File
+				RelativePath="..\..\..\basictypes.h">
+			</File>
+			<File
+				RelativePath="..\..\..\building.h">
+			</File>
+			<File
+				RelativePath="..\..\..\building_controls.h">
+			</File>
+			<File
+				RelativePath="..\..\..\buildings.h">
+			</File>
+			<File
+				RelativePath="..\..\..\buildingtype.h">
+			</File>
+			<File
+				RelativePath="..\..\..\clipboard.h">
+			</File>
+			<File
+				RelativePath="..\..\..\containerbase.h">
+			</File>
+			<File
+				RelativePath="..\..\..\containerbasetype.h">
+			</File>
+			<File
+				RelativePath="..\..\..\controls.h">
+			</File>
+			<File
+				RelativePath="..\..\..\dashboard.h">
+			</File>
+			<File
+				RelativePath="..\..\..\dialog.h">
+			</File>
+			<File
+				RelativePath="..\..\..\dlg_box.h">
+			</File>
+			<File
+				RelativePath="..\..\..\edevents.h">
+			</File>
+			<File
+				RelativePath="..\..\..\edgen.h">
+			</File>
+			<File
+				RelativePath="..\..\..\edglobal.h">
+			</File>
+			<File
+				RelativePath="..\..\..\edmisc.h">
+			</File>
+			<File
+				RelativePath="..\..\..\edselfnt.h">
+			</File>
+			<File
+				RelativePath="..\..\..\errors.h">
+			</File>
+			<File
+				RelativePath="..\..\..\events.h">
+			</File>
+			<File
+				RelativePath="..\..\..\gamedialog.h">
+			</File>
+			<File
+				RelativePath="..\..\..\gamedlg.h">
+			</File>
+			<File
+				RelativePath="..\..\..\gameevent_dialogs.h">
+			</File>
+			<File
+				RelativePath="..\..\..\gameevents.h">
+			</File>
+			<File
+				RelativePath="..\..\..\gameeventsystem.h">
+			</File>
+			<File
+				RelativePath="..\..\..\gamemap.h">
+			</File>
+			<File
+				RelativePath="..\..\..\gameoptions.h">
+			</File>
+			<File
+				RelativePath="..\..\..\geometry.h">
+			</File>
+			<File
+				RelativePath="..\..\..\graphicselector.h">
+			</File>
+			<File
+				RelativePath="..\..\..\graphicset.h">
+			</File>
+			<File
+				RelativePath="..\..\..\gui.h">
+			</File>
+			<File
+				RelativePath="..\..\..\guidimension.h">
+			</File>
+			<File
+				RelativePath="..\..\..\guifunctions.h">
+			</File>
+			<File
+				RelativePath="..\..\..\guiiconhandler.h">
+			</File>
+			<File
+				RelativePath="..\..\..\iconrepository.h">
+			</File>
+			<File
+				RelativePath="..\..\..\infopopup.h">
+			</File>
+			<File
+				RelativePath="..\..\..\itemrepository.h">
+			</File>
+			<File
+				RelativePath="..\..\..\loadbi3.h">
+			</File>
+			<File
+				RelativePath="..\..\..\loaders.h">
+			</File>
+			<File
+				RelativePath="..\..\..\loadimage.h">
+			</File>
+			<File
+				RelativePath="..\..\..\loadpcx.h">
+			</File>
+			<File
+				RelativePath="..\..\..\lzw.h">
+			</File>
+			<File
+				RelativePath="..\..\..\mapalgorithms.h">
+			</File>
+			<File
+				RelativePath="..\..\..\mapdisplay.h">
+			</File>
+			<File
+				RelativePath="..\..\..\mapdisplay2.h">
+			</File>
+			<File
+				RelativePath="..\..\..\mappolygons.h">
+			</File>
+			<File
+				RelativePath="..\..\..\messagedlg.h">
+			</File>
+			<File
+				RelativePath="..\..\..\messages.h">
+			</File>
+			<File
+				RelativePath="..\..\..\misc.h">
+			</File>
+			<File
+				RelativePath="..\..\..\music.h">
+			</File>
+			<File
 				RelativePath="..\ndir.h">
+			</File>
+			<File
+				RelativePath="..\..\..\network.h">
+			</File>
+			<File
+				RelativePath="..\..\..\networkdata.h">
+			</File>
+			<File
+				RelativePath="..\..\..\newfont.h">
+			</File>
+			<File
+				RelativePath="..\..\..\objecttype.h">
+			</File>
+			<File
+				RelativePath="..\..\..\overviewmapimage.h">
+			</File>
+			<File
+				RelativePath="..\..\..\palette.h">
+			</File>
+			<File
+				RelativePath="..\..\..\paradialog.h">
+			</File>
+			<File
+				RelativePath="..\..\..\password.h">
+			</File>
+			<File
+				RelativePath="..\..\..\password_dialog.h">
+			</File>
+			<File
+				RelativePath="..\..\..\pd.h">
+			</File>
+			<File
+				RelativePath="..\..\..\pointers.h">
+			</File>
+			<File
+				RelativePath="..\..\..\polygontriangulation.h">
+			</File>
+			<File
+				RelativePath="..\..\..\prehistoricevents.h">
+			</File>
+			<File
+				RelativePath="..\..\..\replay.h">
+			</File>
+			<File
+				RelativePath="..\..\..\research.h">
 			</File>
 			<File
 				RelativePath=".\resource.h">
 			</File>
+			<File
+				RelativePath="..\..\..\resourcenet.h">
+			</File>
+			<File
+				RelativePath="..\..\..\resourceplacement.h">
+			</File>
+			<File
+				RelativePath="..\..\..\sg.h">
+			</File>
+			<File
+				RelativePath="..\..\..\sgstream.h">
+			</File>
+			<File
+				RelativePath="..\..\..\simplestream.h">
+			</File>
+			<File
+				RelativePath="..\..\..\soundList.h">
+			</File>
+			<File
+				RelativePath="..\..\..\spfst.h">
+			</File>
+			<File
+				RelativePath="..\..\..\stack.h">
+			</File>
+			<File
+				RelativePath="..\..\..\statisticdialog.h">
+			</File>
+			<File
+				RelativePath="..\..\..\stringtokenizer.h">
+			</File>
+			<File
+				RelativePath="..\..\..\strtmesg.h">
+			</File>
+			<File
+				RelativePath="..\..\..\terraintype.h">
+			</File>
+			<File
+				RelativePath="..\..\..\textfile_evaluation.h">
+			</File>
+			<File
+				RelativePath="..\..\..\textfileparser.h">
+			</File>
+			<File
+				RelativePath="..\..\..\textfiletags.h">
+			</File>
+			<File
+				RelativePath="..\..\..\typen.h">
+			</File>
+			<File
+				RelativePath="..\..\..\unitctrl.h">
+			</File>
+			<File
+				RelativePath="..\..\..\vehicle.h">
+			</File>
+			<File
+				RelativePath="..\..\..\vehicletype.h">
+			</File>
+			<File
+				RelativePath="..\..\..\viewcalculation.h">
+			</File>
+			<File
+				RelativePath="..\..\..\weatherarea.h">
+			</File>
+			<File
+				RelativePath="..\..\..\weathercast.h">
+			</File>
+			<Filter
+				Name="graphics"
+				Filter="">
+				<File
+					RelativePath="..\..\..\graphics\blitter.h">
+				</File>
+				<File
+					RelativePath="..\..\..\graphics\drawing.h">
+				</File>
+				<File
+					RelativePath="..\..\..\graphics\surface.h">
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Resource Files"
