--- a/config.h.in
+++ b/config.h.in
@@ -10,6 +10,9 @@
    */
 #undef HAVE_DIRENT_H
 
+/* Define to 1 if you have the <dlfcn.h> header file. */
+#undef HAVE_DLFCN_H
+
 /* Define to 1 if you have the <exception> header file. */
 #undef HAVE_EXCEPTION
 
