--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="ASC"
+	Name="ASC2"
 	ProjectGUID="{B7F902AB-FD64-48FB-B36A-50D48B03447F}"
 	RootNamespace="ASC"
 	Keyword="Win32Proj">
@@ -40,7 +40,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="triangulate.lib libbzip2.lib jpeglib.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.debug.lib paragui_static.lib physfs.lib freetypeMT_D.lib"
 				ShowProgress="0"
-				OutputFile="$(OutDir)/bin/ASC.exe"
+				OutputFile="$(OutDir)/bin/ASC2.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Debug&quot;;&quot;$(SDL_image)/VisualC/Debug&quot;;&quot;$(OutDir)/lib&quot;;../../../libs/SDLmm/SDLmm/debug;&quot;$(SDL)/VisualC/SDLmain/Debug&quot;;&quot;$(SDL)/VisualC/SDL/Debug&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;../../../debug/lib;&quot;$(PARAGUI12)\VisualC\paragui_dynamic\Debug&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;"
 				IgnoreDefaultLibraryNames=""
@@ -96,7 +96,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="sdlevent.lib triangulate.lib libbzip2.lib jpeglib.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.lib paragui_static.lib physfs.lib freetypeMT.lib"
-				OutputFile="$(OutDir)/bin/ASC.exe"
+				OutputFile="$(OutDir)/bin/ASC2.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Release&quot;;&quot;$(SDL_image)/VisualC/Release&quot;;../../../Release/lib;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;../../../libs/SDLmm/SDLmm/release;&quot;$(SDL)/VisualC/SDLmain/Release&quot;;&quot;$(SDL)/VisualC/SDL/Release&quot;;&quot;$(PARAGUI12)\VisualC\paragui_dynamic\Release&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;"
 				GenerateDebugInformation="TRUE"
