New main screen layout of ASC

--- a/source/unix/mapeditor/Makefile.am
+++ b/source/unix/mapeditor/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.19.2.7 2005-04-16 16:01:23 mbickel Exp $
+## $Id: Makefile.am,v 1.19.2.8 2005-05-23 15:51:52 mbickel Exp $
 
 vpath %.cpp ../..
 
@@ -29,7 +29,7 @@ textfile_evaluation.cpp containerbasetype.cpp soundList.cpp simplestream.cpp \
 mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
 gameevent_dialogs.cpp clipboard.cpp resourceplacement.cpp resourceplacementdialog.cpp \
 geometry.cpp weatherarea.cpp guidimension.cpp weatherdialog.cpp \
-iconrepository.cpp overviewmapimage.cpp
+iconrepository.cpp overviewmapimage.cpp mapfield.cpp objects.cpp
 
 asc_mapedit_LDADD   	= $(top_builddir)/source/sdl/libsdl.la \
 $(top_builddir)/source/libs/triangul/libtriangul.la @LDADDLIBBZ2@ \
