--- a/configure.in
+++ b/configure.in
@@ -438,7 +438,7 @@ AC_OUTPUT(  Makefile \
 
 AC_ARG_ENABLE( debug, [  --enable-debug          enables some debugging options and output], ENABLEDEBUG=1 )
 if test "X$ENABLEDEBUG" = "X1"; then
-   CXXFLAGS="$CXXFLAGS -g3"
+   CXXFLAGS="$CXXFLAGS -g3 -O0"
    echo SDL_CFLAGS $SDL_CFLAGS
    echo SDL_LIBS $SDL_LIBS
 dnl   echo SDLMM_CFLAGS $SDLMM_CXXFLAGS
