Fixed: crash when reinforcement event uses invalid IDs

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -24,6 +24,7 @@
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
+				EnableFunctionLevelLinking="TRUE"
 				DisableLanguageExtensions="FALSE"
 				DefaultCharIsUnsigned="TRUE"
 				RuntimeTypeInfo="TRUE"
@@ -44,7 +45,7 @@
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/ASC.pdb"
-				SubSystem="2"
+				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
